@@ -1,3 +1,6 @@
+B]Version 3.2.8[/B]
+- Added cricHD
+
 B]Version 3.2.7[/B]
 - Start sports added and expres channels
 
